# serialize-boost-multi-array

./: README.md
generic_matrix/: CMakeLists.txt  serializable_tensor_n.hpp  serialize-ma.hpp  test_mat.cpp
simple_matrix/: CMakeLists.txt  serialize_matrix.hpp  test_matrix.cpp
simple_vector/: CMakeLists.txt  serialize_vector.hpp  test_vector.cpp
